--- a/src/containers/About/style.scss
+++ b/src/containers/About/style.scss
@@ -16,7 +16,7 @@
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
   }
   .hp-inner {
-    background-image: url('../../images/avt.png');
+    background-image: url("/images/avt.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
