--- a/src/containers/About/style.scss
+++ b/src/containers/About/style.scss
@@ -75,5 +75,10 @@
     .home-buttons {
       text-align: center;
     }
+    .full-name {
+      h1 {
+        font-size: 36px;
+      }
+    }
   }
 }
