--- a/src/components/LanguageSelector/style.scss
+++ b/src/components/LanguageSelector/style.scss
@@ -4,6 +4,27 @@
     img {
         height: 20px;
         width: auto;
-        margin-bottom: 5px;
+        margin-bottom: 4px;
+    }
+    span {
+        padding: 5px 0;
+        font-family: "Poppins", Helvetica, sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        font-style: normal;
+        color: #333333;
+        text-decoration: none;
+        line-height: 50px;
+        opacity: 0.55;
+        letter-spacing: 0px;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        &:hover,
+        &.active {
+            opacity: 1;
+        }
     }
 }
