--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -123,7 +123,7 @@
     }
 
     .mobile-menu-hide {
-      width: 0;
+      // width: 0;
       margin-right: -100%;
       overflow: hidden;
       opacity: 0;
