--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -123,8 +123,8 @@
     }
 
     .mobile-menu-hide {
-      // width: 0;
-      margin-right: -100%;
+      width: 0;
+      // margin-right: -100%;
       overflow: hidden;
       opacity: 0;
       visibility: hidden;
