--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -124,7 +124,7 @@
 
     .mobile-menu-hide {
       width: 0;
-      // margin-right: -100%;
+      margin-right: -100%;
       overflow: hidden;
       opacity: 0;
       visibility: hidden;
