--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -5,16 +5,6 @@
   display: table;
   box-sizing: border-box;
   padding: 40px 40px 0 40px;
-  .background-nav {
-    position: fixed;
-    top: 52px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    opacity: 0.2;
-    z-index: -2;
-  }
   .text-logo {
     &:hover {
       .logo-symbol {
@@ -77,6 +67,7 @@
       }
     }
   }
+
   .mobile-visible {
     display: none;
     visibility: hidden;
@@ -98,16 +89,19 @@
     .mobile-visible {
       visibility: visible;
     }
-
     .site-nav {
       position: fixed;
+      height: 100%;
+      width: 100%;
       background-color: #fff;
-      top: 52px;
+      top: 0;
       bottom: 0;
       right: 0;
-      left: auto;
       width: 100%;
       max-width: 320px;
+      height: calc(100% - 52px);
+      left: auto;
+      top: 52px;
       z-index: -1;
       opacity: 1;
       overflow: auto;
@@ -115,27 +109,36 @@
       -webkit-box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
       -moz-box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
       box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
-      -webkit-transition: 0.44s;
-      -moz-transition: 0.44s;
-      -o-transition: 0.44s;
-      -ms-transition: 0.44s;
-      transition: 0.44s;
+      -webkit-transition: all 0s ease-in-out;
+      -moz-transition: all 0s ease-in-out;
+      -o-transition: all 0s ease-in-out;
+      -ms-transition: all 0s ease-in-out;
+      transition: all 0s ease-in-out;
     }
-
     .mobile-menu-hide {
       width: 0;
-      opacity: 0;
+      right: 0;
       margin-right: -100%;
       overflow: hidden;
+      opacity: 0;
       visibility: hidden;
       -webkit-box-shadow: none;
       -moz-box-shadow: none;
       box-shadow: none;
-      -webkit-transition: 0.44s;
-      -moz-transition: 0.44s;
-      -o-transition: 0.44s;
-      -ms-transition: 0.44s;
-      transition: 0.44s;
+    }
+    .mobile-menu-show {
+      -webkit-transition: all 0.44s ease-in-out;
+      -moz-transition: all 0.44s ease-in-out;
+      -o-transition: all 0.44s ease-in-out;
+      -ms-transition: all 0.44s ease-in-out;
+      transition: all 0.44s ease-in-out;
+    }
+    .mobile-menu-hide {
+      -webkit-transition: all 0.44s ease-in-out;
+      -moz-transition: all 0.44s ease-in-out;
+      -o-transition: all 0.44s ease-in-out;
+      -ms-transition: all 0.44s ease-in-out;
+      transition: all 0.44s ease-in-out;
     }
 
     .site-nav {
@@ -146,13 +149,11 @@
         }
       }
     }
-
     .header-content {
       z-index: 999;
       background-color: #fff;
       padding: 10px 20px;
     }
-
     .logo-symbol {
       width: 32px;
       height: 32px;
@@ -160,7 +161,6 @@
       font-size: 18px;
       margin-top: 0;
     }
-
     .logo-text {
       display: inline-block;
       line-height: 32px;
