--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -105,13 +105,7 @@
       -webkit-box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
       -moz-box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
       box-shadow: 0 0 70px 0 rgba(0, 0, 0, 0.08);
-      -webkit-transition: all 0s ease-in-out;
-      -moz-transition: all 0s ease-in-out;
-      -o-transition: all 0s ease-in-out;
-      -ms-transition: all 0s ease-in-out;
-      transition: all 0s ease-in-out;
     }
-
     .mobile-menu-hide {
       width: 0;
       right: 0;
@@ -122,6 +116,10 @@
       -webkit-box-shadow: none;
       -moz-box-shadow: none;
       box-shadow: none;
+    }
+
+    .mobile-menu-show,
+    .mobile-menu-hide {
       -webkit-transition: all 0.44s ease-in-out;
       -moz-transition: all 0.44s ease-in-out;
       -o-transition: all 0.44s ease-in-out;
